# platform-harness-engineering

./: .gitignore  .mcp.json.example  CLAUDE.md  README.md  pyproject.toml
.claude/: README.md  settings.json
.claude/agents/: implementation-validator.md
.claude/commands/: add-feature.md  setup-project.md
.claude/hooks/: check_tasklist_complete.py  remind_tasklist_update.py
.devcontainer/: devcontainer.json  postCreate.sh
.github/workflows/: publish-template.yml
.steering/20260603-kiro-advanced-harness/: design.md  requirements.md  tasklist.md
.steering/20260603-kiro-remaining-template/: design.md  requirements.md  tasklist.md
.steering/20260603-kiro-spec-template/: design.md  requirements.md  tasklist.md
.steering/20260603-kiro-steering-files/: design.md  requirements.md  tasklist.md
.steering/20260603-repo-structure-update/: design.md  requirements.md  tasklist.md
.steering/20260604-kiro-custom-agents/: design.md  requirements.md  tasklist.md
.steering/20260604-kiro-manual-skills/: design.md  requirements.md  tasklist.md
.steering/20260604-onboarding-doc/: design.md  requirements.md  tasklist.md
.steering/20260605-improve-setup-project-onboarding/: design.md  requirements.md  tasklist.md
.steering/20260605-publish-release-to-for-kiro/: design.md  requirements.md  tasklist.md
codex-template/: .gitignore  AGENTS.md  ONBOARDING.md  README.md
docs/: architecture.md  development-guidelines.md  functional-design.md  glossary.md  harness-guide.md  product-requirements.md  repository-structure.md
kiro-template/: ONBOARDING.md  README.md
(+65 files in other folders)
