[project]
name = "platform-harness-engineering"
version = "0.1.0"
description = "SDDハーネスをKiro・Codex等の各AIツール向けに配布するマルチテンプレートジェネレーター"
requires-python = ">=3.12"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
    "basedpyright>=1.20",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100
include = ["*.py", ".claude/hooks/*.py"]

[tool.basedpyright]
include = [".claude/hooks", "tests"]
pythonVersion = "3.12"
# フックをimportlibで動的ロードするテストの reportAny ノイズを避けるため standard とする
typeCheckingMode = "standard"
